--- a/halfelf.html
+++ b/halfelf.html
@@ -46,11 +46,11 @@
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
         <div class="race-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            S<br>
-            S            
+            Pack Leader<br>
+            Standard Bearer            
             <h3><a href="#minors">Minors</a></h3>
-            P<br>
-            T           
+            Moon Elf Heritage<br>
+            Sun Elf Heritage           
         </div>
     </div>           
 
@@ -60,14 +60,14 @@
         <div class="container-race-powers">        
             <div class="header-race-powers">
                 <div>
-                    <h2 id="wild-charge">Wild Charge</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Disc_WildCharge.png">
+                    <h2 id="bandits-armor">Bandit's Armor</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_BasicBlock.png">
                 </div>                           
             </div>
             <div class="race-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>23 S</div>
+                    <div>47 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -75,15 +75,15 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Rectangle</div>
+                    <div>Self</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div>5 M</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_CastTime.png">
@@ -106,65 +106,11 @@
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Charges you forward 15M dealing 119 damage to enemies in your path. 
-                    Wild Charge applies an Armor Tear to all hit, wich reduces all Final Physical 
-                    Mitigation by 10% for 15 seconds.<br><br>
-                    Enemies may be pushed back depending on how close you are to them when you initiate 
-                    the charge.
+                <p class="info">Protects you with a Barrier preventing up to 1000 Piercing damage or
+                    500 damage of other types for 15 seconds.
                 </p>        
         </div>
-        <div class="container-race-powers">        
-            <div class="header-race-powers">
-                <div>
-                    <h2 id="rear-kick">Rear Kick</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Cntr_RearKick.png">
-                </div>                           
-            </div>
-            <div class="race-powers-cooldown-info">
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>30 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Behind Caster</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Instant</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div>5 M</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Restore.png">
-                    <div></div>
-                </div>
-            </div>    
-                <p class="info">Kicks behind you inflicting Knockdown and causing 94 damage.
-                </p>        
-        </div>
+
     </section>
 
     <h1 class="sub-header">Disciplines</h1>
@@ -174,31 +120,31 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="dryad">Dryad</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_Dryad.png">
+                    <h2 id="pack-leader">Pack Leader</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_PackLeader.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Elken, Nature</p>
+                    <p>Trait: Light, Nature, Half Elf</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
+                    <p>Critical Healing Chance: +2%</p>
                     <p>Healing Bonus: +3%</p>
-                    <p>Support Power: +100</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Blast Of Leaves</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_BlastOfLeaves.png">
-                            <p>Blasts Leaves healing allies in front of you for 188 Health 16 times over 8
-                                seconds while you channel.
+                            <h3>Form Life</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_FormLife_A.png">
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_FormLife_B.png">
+                            <p>Manifests an Orb at your targeted location that allies or you may use
+                                to heal 54 health, up to two orbs per cast.
                             </p>
                         </div>
                         <div>
-                            <h3>Nature's Avatar</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>Empowers an ally, increasing their Damage Bonus, Critical Strike, Critical Damage
-                                and Personal Damage Modifier by 20% and Power Damage Bonus: Melee by 0% while you
-                                channel. 
+                            <h3>Pack Avatar</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Drud_PackAvatar.png">
+                            <p>Empowers your group, increasing Damage Bonus and Critical Strike by 10%
+                                for 20 seconds. 
                             </p>
                         </div>                                       
                 </div>                                            
@@ -207,31 +153,29 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="sun-worshiper">Sun Worshiper</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_SunWorshiper.png">
+                    <h2 id="standard-bearer">Standard Bearer</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_StandardBearer.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Light, Fire</p>
+                    <p>Trait: Half Elf, Human, Justice</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Elemental Resictance: +300</p>
-                    <p>Support Power: +100</p>
+                    <p>Anti-Critical Strike: +3%</p>
+                    <p>Health: +500</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Chain Heal</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ChainHeal.png">
-                            <p>Heals a targeted ally for 111 Health and then chains to an additional nearby
-                                ally that is 30% less effective.
+                            <h3>Rallying Banner</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_RallyingBanner.png">
+                            <p>Fortifies allies with a banner increasing Attack Power by 100, healing those
+                                under 35% Health for 49 health per second and removing slow effects.
                             </p>
                         </div>
                         <div>
-                            <h3>Cleanse</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Purgative.png">
-                            <p>Removes all Bleeds, Diseases, Damnation, Poisons and Aura Emitters from your
-                                group members and gives a short Immunity to those removed. Increses your Bleed
-                                Resictances by 2000 for 12 seconds.
+                            <h3>Sentinel</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_CarefulAim.png">
+                            <p>Improves your Personal Damage Modifier reducing damage by 5% while standing still.
                             </p>
                         </div>                                         
                 </div>                                            
@@ -245,22 +189,22 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="pack-avatar">Pack Avatar</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_PackAvatar.png">
+                    <h2 id="moon-elf-heritage">Moon Elf Heritage</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_MoonElfHeritage.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Elken</p>
+                    <p>Trait: Half Elf, Wood Elf</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
                     <p>Health: +500</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Pack Avatar</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Drud_PackAvatar.png">                        
-                        <p>Empowers your group, increasing Damage Bonus and Critical Strike by 10% for
-                            20 seconds.
+                        <h3>Moon Elf Heritage</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Racial_WoodElf.png">                        
+                        <p>Increases your Perception by 25, Ranged Distance Bonus by 10, Far-sight by
+                            10 and Attack Power by 50 during the night.
                         </p>
                     </div>               
                 </div>
@@ -269,22 +213,22 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="toughness">Toughness</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Toughness.png">
+                    <h2 id="sun-elf-heritage">Sun Elf Heritage</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_SunElfHeritage.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Templar, Centaur, Fire, Light, Music</p>
+                    <p>Trait: Half Elf, High Elf</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Physical Resistance: +300</p>                    
+                    <p>Health: +500</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Toughness</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Toughness.png">                        
-                        <p>Strengthens group members and you increasing their Maximum Health by 1500
-                            for 45 seconds.
+                        <h3>Sun Elf Heritage</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Racial_HighElf.png">                        
+                        <p>Increases your Perception by 25, Ranged Distance Bonus by 10, Far-sight by
+                            10 and Attack Power by 50 during the day.
                         </p>
                     </div>               
                 </div>
