--- a/halfgiant.html
+++ b/halfgiant.html
@@ -46,11 +46,11 @@
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
         <div class="race-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            S<br>
-            S            
+            Heavy Hitter<br>
+            Scrapper            
             <h3><a href="#minors">Minors</a></h3>
-            P<br>
-            T           
+            Sparring<br>
+            Spirit Whip           
         </div>
     </div>           
 
@@ -60,14 +60,14 @@
         <div class="container-race-powers">        
             <div class="header-race-powers">
                 <div>
-                    <h2 id="wild-charge">Wild Charge</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Disc_WildCharge.png">
+                    <h2 id="blood-of-the-giant">Blood Of The Giant</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_BloodOfTheGiant.png">
                 </div>                           
             </div>
             <div class="race-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>23 S</div>
+                    <div>40 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -75,15 +75,15 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Rectangle</div>
+                    <div>Self</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div>5 M</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_CastTime.png">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div>15 S</div>
+                    <div>30 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
@@ -106,18 +106,15 @@
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Charges you forward 15M dealing 119 damage to enemies in your path. 
-                    Wild Charge applies an Armor Tear to all hit, wich reduces all Final Physical 
-                    Mitigation by 10% for 15 seconds.<br><br>
-                    Enemies may be pushed back depending on how close you are to them when you initiate 
-                    the charge.
+                <p class="info">Embraces your Giant heritage increasing size, Damage Bonus and Healing 
+                    Bonus by 10 for 30 seconds, while also granting you damage reduction for 2 seconds.
                 </p>        
         </div>
         <div class="container-race-powers">        
             <div class="header-race-powers">
                 <div>
-                    <h2 id="rear-kick">Rear Kick</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Cntr_RearKick.png">
+                    <h2 id="backhand">Backhand</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_Backhand.png">
                 </div>                           
             </div>
             <div class="race-powers-cooldown-info">
@@ -131,11 +128,11 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Behind Caster</div>
+                    <div>Melee</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_AreaSize.png">
@@ -162,7 +159,7 @@
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Kicks behind you inflicting Knockdown and causing 94 damage.
+                <p class="info">Backhand the target in front of you, stunning and dealing 133 damage.
                 </p>        
         </div>
     </section>
@@ -174,31 +171,31 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="dryad">Dryad</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_Dryad.png">
+                    <h2 id="heavy-hitter">Heavy Hitter</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_HeavyHitter.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Elken, Nature</p>
+                    <p>Trait: Half Giant, Battle, Music</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Healing Bonus: +3%</p>
-                    <p>Support Power: +100</p>
+                    <p>Crushing Damage Bonus: +2%</p>
+                    <p>Damage Bonus: Enemy High Health: +5%</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Blast Of Leaves</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_BlastOfLeaves.png">
-                            <p>Blasts Leaves healing allies in front of you for 188 Health 16 times over 8
-                                seconds while you channel.
+                            <h3>Reverberating Blow</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ReverberatingBlow.png">
+                            <p>Strikes an enemy for 36 Damage and afflicts them with an aura causing other
+                                nearby enemies to suffer 84 Damage every 2 seconds for 14 seconds.
                             </p>
                         </div>
                         <div>
-                            <h3>Nature's Avatar</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>Empowers an ally, increasing their Damage Bonus, Critical Strike, Critical Damage
-                                and Personal Damage Modifier by 20% and Power Damage Bonus: Melee by 0% while you
-                                channel. 
+                            <h3>Overwhelming Odds</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_OverwhelmingOdds.png">
+                            <p>Increases your Resist All stat by 10% for 15 when three or more enemies are
+                                within 10M.<br><br>
+                                This does not increase Bleed Mitigation Bonus. 
                             </p>
                         </div>                                       
                 </div>                                            
@@ -207,31 +204,30 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="sun-worshiper">Sun Worshiper</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_SunWorshiper.png">
+                    <h2 id="scrapper">Scrapper</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_Scrapper.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Light, Fire</p>
+                    <p>Trait: Half Giant, Shadow, Justice, Battle</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Elemental Resictance: +300</p>
-                    <p>Support Power: +100</p>
+                    <p>Critical Damage: +5%</p>
+                    <p>Health: +500</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Chain Heal</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ChainHeal.png">
-                            <p>Heals a targeted ally for 111 Health and then chains to an additional nearby
-                                ally that is 30% less effective.
+                            <h3>In The Fray</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Myrm_Gore.png">
+                            <p>Buffs your Attack Power by 75 and Personal Damage Modifier by 10% for
+                                15 seconds.
                             </p>
                         </div>
                         <div>
-                            <h3>Cleanse</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Purgative.png">
-                            <p>Removes all Bleeds, Diseases, Damnation, Poisons and Aura Emitters from your
-                                group members and gives a short Immunity to those removed. Increses your Bleed
-                                Resictances by 2000 for 12 seconds.
+                            <h3>Death Throws</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_DeathThrows.png">
+                            <p>Knocks down nearby enemies when you use Retaliate ability while Crowd
+                                Controlled.
                             </p>
                         </div>                                         
                 </div>                                            
@@ -245,50 +241,49 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="pack-avatar">Pack Avatar</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_PackAvatar.png">
+                    <h2 id="sparring">Sparring</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Sparring.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Elken</p>
+                    <p>Trait: Assassin, Duelist, Half Giant, Human, War, Battle, Death</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Health: +500</p>                    
+                    <p>Critical Strike: +2%</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Pack Avatar</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Drud_PackAvatar.png">                        
-                        <p>Empowers your group, increasing Damage Bonus and Critical Strike by 10% for
-                            20 seconds.
-                        </p>
+                        <h3>Sparring</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Sparring.png">                        
+                        <p>Increases your basic attack damage by 10%.
+                        </p>                          
                     </div>               
                 </div>
-            </div>
+            </div>    
         </div>
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="toughness">Toughness</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Toughness.png">
+                    <h2 id="spirit-whip">Spirit Whip</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_SpiritWhip.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Templar, Centaur, Fire, Light, Music</p>
+                    <p>Trait: Assassin, Templar, Half Giant, Frost, War, Battle</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Physical Resistance: +300</p>                    
+                    <p>Damage Bonus: Enemy High Health: +5%</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Toughness</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Toughness.png">                        
-                        <p>Strengthens group members and you increasing their Maximum Health by 1500
-                            for 45 seconds.
-                        </p>
+                        <h3>Spirit WHip</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_SpiritWhip.png">                        
+                        <p>Whips two additional targets with basic attacks but with damage reducing by 50%
+                            for the first whip and 25% for the second.
+                        </p>                          
                     </div>               
                 </div>
-            </div>
+            </div>    
         </div>
     </section>
 </body>
